# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surfflow"
version = "1.0.4"
description = "Calculate surface energies of arbitrary crystals."
readme = "README.md"
authors = [{ name = "Firat Yalcin", email = "firat.yalcin@univie.ac.at" },
            { name = "Michael Wolloch", email = "michael.wolloch@univie.ac.at"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["tribology", "surface energy", "surface", "wulff shape", "wulff construction"]
dependencies = [
    "pymatgen",
    "custodian",
    "fireworks",
    "streamlit",
    "htflow-utils[workflows]",
    "custodian",
    "emmet",
]
requires-python = ">=3.9"

[tool.distutils.bdist_wheel]
universal = true

[project.scripts]
surfflow_tool = "surfflow.scripts.main:cli"

[tool.bumpver]
current_version = "1.0.4"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

